--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ body {
 #separador {
   width: 100%; 
   height: 10rem; 
-  background-image: url('/img/fundo2.png'); 
+  background-image: url('../img/fundo2.png'); 
   background-repeat: no-repeat;
 }
 
